# DomainProof

./: Cargo.toml  package-lock.json  package.json
circom/: main.circom
domain_proof/: Move.toml
domain_proof/sources/: generate_verified_domain.move
rust/: Cargo.toml
rust/src/: main.rs
