[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
rand = "0.8.5"
num-bigint = "0.4.3"
